--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -160,14 +160,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738480.md#1">美中期选举周二初选繁忙 七场选赛抢先看</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740664.md#1">拜登亚洲行令中共紧张 战狼窜出 朝鲜或异动</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740742.md#1">中共“躲避”UN粮食会议 美官员为何说不奇怪</a></li>
 <li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740583.md#1">拜登将展开亚洲之行 加强与盟友合作</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740458.md#1">拜登到访前夕 韩国决定加入印太经济框架</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010192.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
